reverting incorrect .toList() refactoring